@@ -205,7 +205,6 @@ begin_pkt:
     /* $TTL <default ttl> */
     ttl = adapi_get_ttl(zone);
 
-begin_rrs:
     /* read RRs */
     while ((rr = addns_read_rr(fd, line, &orig, &prev, &ttl, &status, &l))
         != NULL) {
@@ -377,7 +376,6 @@ begin_rrs:
             startpos = fpos;
             goto begin_pkt;
         } else {
-            ods_log_info("[%s] xfr zone %s incomplete, restore", adapter_str, zone->name);
             result = ODS_STATUS_XFRINCOMPLETE;
         }
     }
@@ -419,54 +417,31 @@ begin_rrs:
         if (!xfrd || !fin || !fout) {
             return ODS_STATUS_MALLOC_ERR;
         }
-        ods_log_info("[%s] restore xfrd zone %s xfrd %s fin %s fout %s",
+        ods_log_debug("[%s] restore xfrd zone %s xfrd %s fin %s fout %s",
             adapter_str, zone->name, xfrd, fin, fout);
         result = ods_file_copy(fin, fout, startpos, 0);
         if (result != ODS_STATUS_OK) {
             ods_log_crit("[%s] unable to restore incomple xfr zone %s: %s",
                 adapter_str, zone->name, ods_status2str(result));
         } else {
-            ods_log_info("[%s] copied xfrd zone %s file %s to %s",
-                adapter_str, zone->name, fin, fout);
-
             lock_basic_lock(&zone->xfrd->rw_lock);
-            ods_log_info("[%s] locked xfrd zone %s file %s",
-                adapter_str, zone->name, xfrd);
             if (ods_file_lastmodified(xfrd)) {
-                ods_log_info("[%s] xfrd zone %s file %s was modified",
-                    adapter_str, zone->name, xfrd);
                 result = ods_file_copy(xfrd, fout, 0, 1);
                 if (result != ODS_STATUS_OK) {
                     ods_log_crit("[%s] unable to restore xfrd zone %s: %s",
                         adapter_str, zone->name, ods_status2str(result));
-                } else {
-                    ods_log_info("[%s] copied xfrd zone %s file %s to %s",
-                        adapter_str, zone->name, xfrd, fout);
-                    if (rename(fout, xfrd) != 0) {
-                        result = ODS_STATUS_RENAME_ERR;
-                        ods_log_crit("[%s] unable to restore xfrd zone %s: %s",
-                            adapter_str, zone->name, ods_status2str(result));
-                    } else {
-                        ods_log_info("[%s] renamed xfrd zone %s file %s to %s",
-                            adapter_str, zone->name, fout, xfrd);
-                    }
-                }
-            } else {
-                ods_log_info("[%s] xfrd zone %s file %s was not modified",
-                    adapter_str, zone->name, xfrd);
-                if (rename(fout, xfrd) != 0) {
+                } else if (rename(fout, xfrd) != 0) {
                     result = ODS_STATUS_RENAME_ERR;
                     ods_log_crit("[%s] unable to restore xfrd zone %s: %s",
                         adapter_str, zone->name, ods_status2str(result));
-                } else {
-                    ods_log_info("[%s] renamed xfrd zone %s file %s to %s",
-                        adapter_str, zone->name, fout, xfrd);
                 }
+            } else if (rename(fout, xfrd) != 0) {
+                result = ODS_STATUS_RENAME_ERR;
+                ods_log_crit("[%s] unable to restore xfrd zone %s: %s",
+                    adapter_str, zone->name, ods_status2str(result));
 
             }
             lock_basic_unlock(&zone->xfrd->rw_lock);
-            ods_log_info("[%s] unlocked xfrd zone %s file %s",
-                adapter_str, zone->name, xfrd);
         }
         free((void*) xfrd);
         free((void*) fin);
