@@ -446,15 +446,13 @@ ods_file_copy(const char* file1, const char* file2, long startpos, int append)
         close(fin);
         return ODS_STATUS_FOPEN_ERR;
     }
-    ods_log_info("[%s] lseek file %s pos %ld", file_str, file1, startpos);
+    ods_log_debug("[%s] lseek file %s pos %ld", file_str, file1, startpos);
     if (lseek(fin, startpos, SEEK_SET) < 0) {
         return ODS_STATUS_FSEEK_ERR;
     }
     while (1) {
-        ods_log_info("[%s] read file %s", file_str, file1);
         read_size = read(fin, buf, sizeof(buf));
         if (read_size == 0) {
-            ods_log_info("[%s] read file %s size %d", file_str, file1, read_size);
             break;
         }
         if (read_size < 0) {
@@ -464,7 +462,6 @@ ods_file_copy(const char* file1, const char* file2, long startpos, int append)
             close(fout);
             return ODS_STATUS_FREAD_ERR;
         }
-        ods_log_info("[%s] write file %s", file_str, file2);
         if (write(fout, buf, (unsigned int) read_size) < 0) {
             ods_log_error("[%s] write file %s error %s", file_str, file1,
                 strerror(errno));
@@ -473,7 +470,6 @@ ods_file_copy(const char* file1, const char* file2, long startpos, int append)
             return ODS_STATUS_FWRITE_ERR;
         }
     }
-    ods_log_info("[%s] file copy %s to %s done", file_str, file1, file2);
     close(fin);
     close(fout);
     return ODS_STATUS_OK;
